// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render properly 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  border: 0;
  background-color: transparent;
  padding: 1.6rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  position: relative;
  color: #607890;
  border-right: 0 none;
}

.c0 .c3 {
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 2.6rem;
}

.c0 p {
  line-height: 2.2rem;
  font-size: 1.4rem;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  height: 0.4rem;
  background-color: transparent;
  border-radius: 0;
  position: absolute;
  left: 0;
  bottom: 0;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover::after {
  background-color: #F7F8F9;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled::after {
  background-color: transparent;
}

.c0:last-child {
  border-right: 0 none;
}

.c0:hover {
  background-color: #F7F8F9;
}

.c0:hover .c3,
.c0:hover .sc-AxhCb {
  color: #435465;
}

.c0:hover .sc-AxiKw {
  background-color: #435465;
}

.c0:hover .sc-AxjAm {
  background-color: #dfe4e9;
  border-color: #dfe4e9;
}

.c0:hover .sc-AxjAm * {
  fill: #435465;
}

.c1 {
  margin-left: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3 {
  grid-area: label;
}

<div>
  <button
    aria-controls="panel-tab1"
    aria-selected="false"
    class="c0"
    id="tab1"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3 c4"
        >
          Add
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`Tab should render properly with icon 1`] = `
.c2 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c2 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  border: 0;
  background-color: transparent;
  padding: 1.6rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  position: relative;
  color: #607890;
  border-right: 0 none;
}

.c0 .c5 {
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 2.6rem;
}

.c0 p {
  line-height: 2.2rem;
  font-size: 1.4rem;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  height: 0.4rem;
  background-color: transparent;
  border-radius: 0;
  position: absolute;
  left: 0;
  bottom: 0;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover::after {
  background-color: #F7F8F9;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled::after {
  background-color: transparent;
}

.c0 .c1 {
  border-radius: 50%;
  border: 1px solid #eff2f4;
  background-color: #eff2f4;
  padding: 0.5rem;
  font-size: 2rem;
}

.c0:last-child {
  border-right: 0 none;
}

.c0:hover {
  background-color: #F7F8F9;
}

.c0:hover .c5,
.c0:hover .sc-AxhCb {
  color: #435465;
}

.c0:hover .sc-AxiKw {
  background-color: #435465;
}

.c0:hover .c1 {
  background-color: #dfe4e9;
  border-color: #dfe4e9;
}

.c0:hover .c1 * {
  fill: #435465;
}

.c3 {
  margin-left: 1.6rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c5 {
  grid-area: label;
}

<div>
  <button
    aria-controls="panel-tab1"
    aria-selected="false"
    class="c0"
    id="tab1"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="c1 c2"
      fill="none"
      focusable="false"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <span
          class="c5 c6"
        >
          Add
        </span>
      </div>
    </div>
  </button>
</div>
`;
